# one-shot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  package.json
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: cli.py  config.py  database.py  main.py
backend/app/api/: admin.py  auth.py  deps.py  tasks.py
backend/app/middleware/: security.py
backend/app/models/: __init__.py  refresh_token.py  task.py  user.py
backend/app/schemas/: __init__.py  admin.py  task.py  user.py
backend/app/services/: admin.py  auth.py  task.py
backend/tests/: conftest.py  test_admin.py  test_auth.py  test_isolation.py  test_tasks.py
frontend/: package.json  playwright.config.ts  svelte.config.js  tailwind.config.js
frontend/src/: app.css
frontend/src/lib/api/: client.ts
frontend/src/lib/components/: Navigation.svelte  TaskCard.svelte  TaskFilter.svelte  TaskForm.svelte  TaskList.svelte  UserTable.svelte
frontend/src/lib/stores/: auth.ts  tasks.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/admin/: +layout.svelte  +page.svelte
frontend/src/routes/dashboard/: +layout.svelte  +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/register/: +page.svelte
frontend/tests/: admin.spec.ts  auth.spec.ts  fixtures.ts  tasks-filter.spec.ts  tasks.spec.ts
src/: App.tsx  main.tsx
